// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean.json 1`] = `
true
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
true

`;

exports[`boolean.json 2`] = `
true
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
true

`;

exports[`boolean.json 3`] = `
true
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
true

`;

exports[`boolean.json 4`] = `
true
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
true

`;

exports[`boolean.json 5`] = `
true
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
true

`;

exports[`multi-line.json 1`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "key1": [true, false, null],
  "key2": {
    "key3": [1, 2, "3", 1e10, 1e-3]
  }
}

`;

exports[`multi-line.json 2`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "key1": [true, false, null],
  "key2": {
    "key3": [1, 2, "3", 1e10, 1e-3]
  }
}

`;

exports[`multi-line.json 3`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  key1: [true, false, null],
  key2: {
    key3: [1, 2, "3", 1e10, 1e-3]
  }
}

`;

exports[`multi-line.json 4`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  key1: [true, false, null],
  key2: {
    key3: [1, 2, "3", 1e10, 1e-3],
  },
}

`;

exports[`multi-line.json 5`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "key1": [
    true,
    false,
    null
  ],
  "key2": {
    "key3": [
      1,
      2,
      "3",
      10000000000,
      0.001
    ]
  }
}

`;

exports[`null.json 1`] = `
null
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
null

`;

exports[`null.json 2`] = `
null
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
null

`;

exports[`null.json 3`] = `
null
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
null

`;

exports[`null.json 4`] = `
null
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
null

`;

exports[`null.json 5`] = `
null
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
null

`;

exports[`number.json 1`] = `
0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
0

`;

exports[`number.json 2`] = `
0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
0

`;

exports[`number.json 3`] = `
0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
0

`;

exports[`number.json 4`] = `
0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
0

`;

exports[`number.json 5`] = `
0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
0

`;

exports[`pass1.json 1`] = `
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 0.123456789e-12,
    "E": 1.23456789e34,
    "": 23456789012e66,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & /",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [1, 2, 3, 4, 5, 6, 7],
    "compact": [1, 2, 3, 4, 5, 6, 7],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
    "/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?":
      "A key can be any string"
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud"
]

`;

exports[`pass1.json 2`] = `
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 0.123456789e-12,
    "E": 1.23456789e34,
    "": 23456789012e66,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & /",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [1, 2, 3, 4, 5, 6, 7],
    "compact": [1, 2, 3, 4, 5, 6, 7],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
    "/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?":
      "A key can be any string"
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud"
]

`;

exports[`pass1.json 3`] = `
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    integer: 1234567890,
    real: -9876.54321,
    e: 0.123456789e-12,
    E: 1.23456789e34,
    "": 23456789012e66,
    zero: 0,
    one: 1,
    space: " ",
    quote: '"',
    backslash: "\\\\",
    controls: "\\b\\f\\n\\r\\t",
    slash: "/ & /",
    alpha: "abcdefghijklmnopqrstuvwyz",
    ALPHA: "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    digit: "0123456789",
    "0123456789": "digit",
    special: "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    hex: "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    true: true,
    false: false,
    null: null,
    array: [],
    object: {},
    address: "50 St. James Street",
    url: "http://www.JSON.org/",
    comment: "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [1, 2, 3, 4, 5, 6, 7],
    compact: [1, 2, 3, 4, 5, 6, 7],
    jsontext: '{"object with 1 member":["array with 1 element"]}',
    quotes: "&#34; \\u0022 %22 0x22 034 &#x22;",
    "/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?":
      "A key can be any string"
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud"
]

`;

exports[`pass1.json 4`] = `
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    integer: 1234567890,
    real: -9876.54321,
    e: 0.123456789e-12,
    E: 1.23456789e34,
    "": 23456789012e66,
    zero: 0,
    one: 1,
    space: " ",
    quote: '"',
    backslash: "\\\\",
    controls: "\\b\\f\\n\\r\\t",
    slash: "/ & /",
    alpha: "abcdefghijklmnopqrstuvwyz",
    ALPHA: "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    digit: "0123456789",
    "0123456789": "digit",
    special: "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    hex: "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    true: true,
    false: false,
    null: null,
    array: [],
    object: {},
    address: "50 St. James Street",
    url: "http://www.JSON.org/",
    comment: "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [1, 2, 3, 4, 5, 6, 7],
    compact: [1, 2, 3, 4, 5, 6, 7],
    jsontext: '{"object with 1 member":["array with 1 element"]}',
    quotes: "&#34; \\u0022 %22 0x22 034 &#x22;",
    "/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?":
      "A key can be any string",
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud",
]

`;

exports[`pass1.json 5`] = `
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[
  "JSON Test Pattern pass1",
  {
    "object with 1 member": [
      "array with 1 element"
    ]
  },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 1.23456789e-13,
    "E": 1.23456789e+34,
    "": 2.3456789012e+76,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & /",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "ģ䕧覫췯ꯍ",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1,
      2,
      3,
      4,
      5,
      6,
      7
    ],
    "compact": [
      1,
      2,
      3,
      4,
      5,
      6,
      7
    ],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\" %22 0x22 034 &#x22;",
    "/\\\\\\"쫾몾ꮘﳞ볚\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
  },
  0.5,
  98.6,
  99.44,
  1066,
  10,
  1,
  0.1,
  1,
  2,
  2,
  "rosebud"
]

`;

exports[`positive-number.json 1`] = `
+123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+123

`;

exports[`positive-number.json 2`] = `
+123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+123

`;

exports[`positive-number.json 3`] = `
+123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+123

`;

exports[`positive-number.json 4`] = `
+123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+123

`;

exports[`positive-number.json 5`] = `
+123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123

`;

exports[`propertyKey.json 1`] = `
{
    a: 123
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "a": 123
}

`;

exports[`propertyKey.json 2`] = `
{
    a: 123
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "a": 123
}

`;

exports[`propertyKey.json 3`] = `
{
    a: 123
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  a: 123
}

`;

exports[`propertyKey.json 4`] = `
{
    a: 123
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  a: 123,
}

`;

exports[`propertyKey.json 5`] = `
{
    a: 123
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "a": 123
}

`;

exports[`single-line.json 1`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

`;

exports[`single-line.json 2`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

`;

exports[`single-line.json 3`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

`;

exports[`single-line.json 4`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

`;

exports[`single-line.json 5`] = `
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "key1": [
    true,
    false,
    null
  ],
  "key2": {
    "key3": [
      1,
      2,
      "3",
      10000000000,
      0.001
    ]
  }
}

`;

exports[`single-quote.json 1`] = `
'hello'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"hello"

`;

exports[`single-quote.json 2`] = `
'hello'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"hello"

`;

exports[`single-quote.json 3`] = `
'hello'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"hello"

`;

exports[`single-quote.json 4`] = `
'hello'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"hello"

`;

exports[`single-quote.json 5`] = `
'hello'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"hello"

`;

exports[`string.json 1`] = `
"string"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"string"

`;

exports[`string.json 2`] = `
"string"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"string"

`;

exports[`string.json 3`] = `
"string"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"string"

`;

exports[`string.json 4`] = `
"string"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"string"

`;

exports[`string.json 5`] = `
"string"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"string"

`;

exports[`trailingComma.notjson 1`] = `
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

`;

exports[`trailingComma.notjson 2`] = `
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

`;

exports[`trailingComma.notjson 3`] = `
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  k1: "v1",
  k2: "v2",
  k3: "v3"
}

`;

exports[`trailingComma.notjson 4`] = `
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  k1: "v1",
  k2: "v2",
  k3: "v3",
}

`;

exports[`trailingComma.notjson 5`] = `
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  "k1": "v1",
  "k2": "v2",
  "k3": "v3"
}

`;
